Checked null values

--- a/ChurnPrediction.ipynb
+++ b/ChurnPrediction.ipynb
@@ -3334,12 +3334,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 110,
    "id": "d7cc89c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Finally our dataframe is ready.NOW remainning work is to test and train data "
+    "#Data munging stage is completed."
    ]
   },
   {
